Handle log rotation via file-identity tracking, read increments byte-wise with line merging, preserve search highlights, and bound stdin buffering